# fedetivity

./: .drone.yml  .gitignore  Cargo.toml  README.md
src/: determinator.rs  fed_client.rs  lib.rs  main.rs  messages.rs  transmitter.rs
tests/: transmit_mentions_test.rs
tests/common/: mod.rs  webmocket.rs
transmitter/: Cargo.toml
transmitter/src/: lib.rs  main.rs
