[package]
name = "fedetivity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-codec = "0.5.0"
actix-rt = "2.7.0"
async-trait = "0.1.59"
awc = "3.0.1"
env_logger = "0.10.0"
futures = "0.3.25"
futures-util = "0.3.25"
log = "0.4.17"
