[package]
name = "fedetivity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-codec = "0.5.0"
actix-rt = "2.7.0"
async-trait = "0.1.59"
env_logger = "0.10.0"
futures = "0.3.25"
futures-util = "0.3.25"
log = "0.4.17"
megalodon = "0.4.0"
tungstenite = { version = "0.18.0", features = ["rustls-tls-webpki-roots"] }

[dev-dependencies]
reqwest = "0.11.13"
